add full cleanup on dataset

--- a/notebooks/Clean.ipynb
+++ b/notebooks/Clean.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "Name: classificacao_acidente, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "(96363, 25)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "Name: classificacao_acidente, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "Name: classificacao_acidente, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "(184225, 30)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        "(184224, 31)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "(184224, 32)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,340 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weekdays = {\n",
+    "    'sábado': 'saturday',\n",
+    "    'domingo': 'sunday',\n",
+    "    'sexta-feira': 'friday',\n",
+    "    'sexta': 'friday',\n",
+    "    'segunda-feira': 'monday',\n",
+    "    'segunda': 'monday',\n",
+    "    'quinta-feira': 'thursday',\n",
+    "    'quinta': 'thursday',\n",
+    "    'quarta-feira': 'wednesday',\n",
+    "    'quarta': 'wednesday',\n",
+    "    'terça-feira': 'tuesday',\n",
+    "    'terça': 'tuesday',\n",
+    "}\n",
+    "\n",
+    "df['weekday'] = df.dia_semana.apply(lambda x: weekdays[x.lower()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accident_type = {\n",
+    "    'saída de leito carroçável': 'carriage bed outlet',\n",
+    "    'saída de pista': 'out of road',\n",
+    "    'colisão traseira': 'rear collision',             \n",
+    "    'colisão lateral': 'lateral collision',\n",
+    "    'colisão transversal': 'transversal collision',\n",
+    "    'colisão com objeto estático': 'collision with static object',\n",
+    "    'colisão com objeto fixo': 'collision with static object',\n",
+    "    'colisão frontal': 'frontal collision',\n",
+    "    'colisão com objeto em movimento': 'collision with moving object',\n",
+    "    'colisão com objeto móvel': 'collision with moving object',\n",
+    "    'colisão com bicicleta': 'bike collision',\n",
+    "\n",
+    "    'tombamento': 'tipping',\n",
+    "\n",
+    "    'atropelamento de animal': 'animal trampling', \n",
+    "    'atropelamento de pedestre': 'pedestrian trampling',\n",
+    "    'atropelamento de pessoa': 'pedestrian trampling',\n",
+    "\n",
+    "    'queda de ocupante de veículo': 'vehicle occupant fall',\n",
+    "    'queda de motocicleta / bicicleta / veículo': 'vehicle fall',\n",
+    "\n",
+    "    'engavetamento': 'pestle',      \n",
+    "    'incêndio': 'fire',\n",
+    "    'derramamento de carga': 'cargo spill',\n",
+    "    'danos eventuais': 'eventual damage',\n",
+    "    'capotamento': 'rollover',\n",
+    "}\n",
+    "\n",
+    "df['accident_type'] = df.tipo_acidente.apply(lambda x: accident_type[x.lower().strip()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accident_type_simple = {\n",
+    "    'saída de leito carroçável': 'carriage bed outlet',\n",
+    "    'saída de pista': 'out of road',\n",
+    "    'colisão traseira': 'collision',             \n",
+    "    'colisão lateral': 'collision',\n",
+    "    'colisão transversal': 'collision',\n",
+    "    'colisão com objeto estático': 'collision',\n",
+    "    'colisão com objeto fixo': 'collision',\n",
+    "    'colisão frontal': 'collision',\n",
+    "    'colisão com objeto em movimento': 'collision',\n",
+    "    'colisão com objeto móvel': 'collision',\n",
+    "    'colisão com bicicleta': 'collision',\n",
+    "\n",
+    "    'tombamento': 'tipping',\n",
+    "\n",
+    "    'atropelamento de animal': 'trampling', \n",
+    "    'atropelamento de pedestre': 'trampling',\n",
+    "    'atropelamento de pessoa': 'trampling',\n",
+    "\n",
+    "    'queda de ocupante de veículo': 'vehicle occupant fall',\n",
+    "    'queda de motocicleta / bicicleta / veículo': 'vehicle fall',\n",
+    "\n",
+    "    'engavetamento': 'pestle',      \n",
+    "    'incêndio': 'fire',\n",
+    "    'derramamento de carga': 'cargo spill',\n",
+    "    'danos eventuais': 'eventual damage',\n",
+    "    'capotamento': 'rollover',\n",
+    "}\n",
+    "\n",
+    "df['accident_type_simplified'] = df.tipo_acidente.apply(lambda x: accident_type_simple[x.lower().strip()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accident_cause = {\n",
+    " 'fenômenos da natureza': 'nature phenomena',\n",
+    " 'falta de atenção à condução': 'lack of attention to driving',\n",
+    " 'animais na pista': 'animal in the road',\n",
+    " 'avarias e/ou desgaste excessivo no pneu': 'problems on the tire',\n",
+    " 'ingestão de álcool': 'alcohol ingestion',\n",
+    " 'defeito mecânico no veículo': 'mecanical problem',\n",
+    " 'desobediência às normas de trânsito pelo condutor': 'disobedience to the rules of transit by the driver',\n",
+    " 'velocidade incompatível': 'incompatible speed',\n",
+    " 'restrição de visibilidade': 'visibility restriction',\n",
+    " 'falta de atenção do pedestre': 'lack of attention of the pedestrian',\n",
+    " 'condutor dormindo': 'driver asleep',\n",
+    " 'pista escorregadia': 'slippery track',\n",
+    " 'não guardar distância de segurança': 'unsafety distance',\n",
+    " 'ultrapassagem indevida': 'improper overshoot',\n",
+    " 'defeito na via': 'defect on the road',\n",
+    " 'sinalização da via insuficiente ou inadequada': 'insufficient or inadequate road signs',\n",
+    " 'mal súbito': 'sudden onset',\n",
+    " 'carga excessiva e/ou mal acondicionada': 'excessive cargo',\n",
+    " 'objeto estático sobre o leito carroçável': 'static object on the dockable bed',\n",
+    " 'deficiência ou não acionamento do sistema de iluminação/sinalização do veículo': 'no lights on the vehicle',\n",
+    " 'ingestão de substâncias psicoativas': 'drugs ingestion',\n",
+    " 'agressão externa': 'external offensive',\n",
+    " 'falta de atenção': 'lack of attention',\n",
+    " 'ingestão de álcool': 'alcohol ingestion',\n",
+    " 'outras': 'other',\n",
+    " 'velocidade incompatível': 'incompatible speed',\n",
+    " 'ultrapassagem indevida': 'improper overshoot',\n",
+    " 'dormindo': 'driver asleep',\n",
+    " 'desobediência à sinalização': 'disobedience to the rules of transit by the driver',\n",
+    " 'defeito mecânico em veículo': 'mecanical problem',\n",
+    " 'não guardar distância de segurança': 'unsafety distance',\n",
+    " 'defeito na via': 'defect on the road',\n",
+    " 'animais na pista': 'animal in the road',        \n",
+    "}\n",
+    "\n",
+    "df['accident_cause_simplified'] = df.causa_acidente.apply(lambda x: accident_cause[x.lower().strip()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clima = {\n",
+    " 'chuva': 'rain',\n",
+    " 'garoa/chuvisco': 'bad weather',\n",
+    " 'céu claro': 'clear sky',\n",
+    " 'nublado': 'cloudy',\n",
+    " 'ignorado': 'notavailable',\n",
+    " 'nevoeiro/neblina': 'bad weather',\n",
+    " 'sol': 'clear sky',\n",
+    " 'vento': 'windy',\n",
+    " 'granizo': 'bad weather',\n",
+    " 'neve': 'bad weather',\n",
+    " 'vento': 'bad weather',\n",
+    " 'ceu claro': 'clear sky',\n",
+    " 'nublado': 'cloudy',\n",
+    " 'chuva': 'rain',\n",
+    " 'nevoeiro/neblina': 'bad weather',\n",
+    " 'sol': 'clear sky',\n",
+    " 'ignorada': 'notavailable',\n",
+    " 'granizo': 'bad weather',\n",
+    " 'indisponivel': 'notavailable',\n",
+    " 'neve': 'bad weather'\n",
+    "}\n",
+    "\n",
+    "df['climate'] = df.condicao_metereologica.fillna('indisponivel').apply(lambda x: clima[x.lower().strip()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df.climate != 'notavailable']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "moment_of_day = {\n",
+    " 'plena noite': 'night',\n",
+    " 'amanhecer': 'dawn',\n",
+    " 'pleno dia': 'day',\n",
+    " 'anoitecer': 'nightfall',\n",
+    " 'plena noite': 'night',\n",
+    " 'pleno dia': 'day',\n",
+    " 'amanhecer': 'dawn',\n",
+    " 'anoitecer': 'nightfall',\n",
+    " 'nan': 'nan'\n",
+    "}\n",
+    "df['moment_of_day'] = df.fase_dia.fillna('nan').apply(lambda x: moment_of_day[x.lower().strip()])\n",
+    "\n",
+    "df = df[df.moment_of_day != 'nan']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "km_str = df.km.str.replace(',','.')\n",
+    "km_float = km_str.astype(float)\n",
+    "\n",
+    "km_float = km_float.fillna(99999)\n",
+    "\n",
+    "km_int = km_float.apply(lambda x: int(round(x)))\n",
+    "df['km_int'] = km_int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "br_int = df.br.fillna(99999).astype(int)\n",
+    "br_str = br_int.astype(object)\n",
+    "\n",
+    "df['br_str'] = br_str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['br', 'causa_acidente', 'classificacao_acidente',\n",
+       "       'condicao_metereologica', 'delegacia', 'dia_semana', 'fase_dia',\n",
+       "       'feridos', 'feridos_graves', 'feridos_leves', 'ignorados', 'ilesos',\n",
+       "       'km', 'latitude', 'longitude', 'mortos', 'municipio', 'pessoas',\n",
+       "       'regional', 'sentido_via', 'tipo_acidente', 'tipo_pista', 'tracado_via',\n",
+       "       'uf', 'uop', 'uso_solo', 'veiculos', 'hora', 'ano', 'mes', 'dia',\n",
+       "       'target', 'weekday', 'accident_type', 'accident_type_simplified',\n",
+       "       'accident_cause_simplified', 'climate', 'moment_of_day', 'km_int',\n",
+       "       'br_str'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "road_type = {\n",
+    "    'simples': 'simple', \n",
+    "    'dupla': 'double', \n",
+    "    'múltipla': 'multiple', \n",
+    "    'simples': 'simple', \n",
+    "    'dupla': 'double', \n",
+    "    'múltipla': 'multiple',\n",
+    "}\n",
+    "\n",
+    "df['road_type'] = df.tipo_pista.apply(lambda x: road_type[x.lower().strip()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "road_way = {\n",
+    "    'crescente': 'up', \n",
+    "    'decrescente': 'down', \n",
+    "    'não informado': 'notavailable', \n",
+    "    'crescente': 'up', \n",
+    "    'decrescente': 'down',\n",
+    "}\n",
+    "df['road_way'] = df.sentido_via.apply(lambda x: road_way[x.strip().lower()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "road_layout = {\n",
+    "    'reta': 'straight',\n",
+    "    'curva': 'curve',\n",
+    "    'não informado': 'notavailable',\n",
+    "    'interseção de vias': 'intersection',\n",
+    "    'rotatória': 'roundabout',\n",
+    "    'desvio temporário': 'temporary detour',\n",
+    "    'viaduto': 'viaduct',\n",
+    "    'ponte': 'bridge',\n",
+    "    'retorno regulamentado': 'return',\n",
+    "    'túnel': 'tunnel',\n",
+    "    'reta': 'straight',\n",
+    "    'curva': 'curve',\n",
+    "    'cruzamento': 'crossing',\n",
+    "}\n",
+    "df['road_layout'] = df.tracado_via.apply(lambda x: road_layout[x.lower().strip()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(['causa_acidente', 'dia_semana', 'tipo_acidente', 'classificacao_acidente', \n",
+    "         'condicao_metereologica', 'fase_dia', 'km', 'br', 'tipo_pista', 'sentido_via',\n",
+    "         'tracado_via'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
