add more analysis

--- a/notebooks/12-RandomForest-Binary-Perspective-undersampling.ipynb
+++ b/notebooks/12-RandomForest-Binary-Perspective-undersampling.ipynb
@@ -107,8 +107,17 @@
    "outputs": [],
    "source": [
     "dd = df2[['weekday', 'uf', 'br_str', 'km_int', 'accident_cause_simplified', 'accident_type', \n",
-    "        'moment_of_day', 'climate', 'road_type', 'road_layout', 'road_way', 'target']]\n",
+    "        'moment_of_day', 'climate', 'road_layout', 'target']]\n",
     "dd = dd.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dd.target.value_counts()"
    ]
   },
   {
@@ -449,7 +458,7 @@
     "model = RandomForestClassifier(verbose=1)\n",
     "\n",
     "parameters = {\n",
-    "    'n_estimators': [10, 100],\n",
+    "    'n_estimators': [100],\n",
     "    'criterion': ['gini', 'entropy'],\n",
     "    'max_features': ['sqrt', 'auto', 'log2', None],\n",
     "    'class_weight': ['balanced', None],\n",
@@ -580,6 +589,13 @@
     "\n",
     "print(classification_report(y_test, y_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
