add updated clean ipynb

--- a/notebooks/Clean.ipynb
+++ b/notebooks/Clean.ipynb
@@ -427,10 +427,10 @@
     }
    ],
    "source": [
-    "df['hora'] = df.horario.apply(lambda x: x.split(':')[0])\n",
-    "df['ano'] = df.data_inversa.apply(lambda x: x.split('-')[0])\n",
-    "df['mes'] = df.data_inversa.apply(lambda x: x.split('-')[1])\n",
-    "df['dia'] = df.data_inversa.apply(lambda x: x.split('-')[2])\n",
+    "df['hour'] = df.horario.apply(lambda x: x.split(':')[0])\n",
+    "df['year'] = df.data_inversa.apply(lambda x: x.split('-')[0])\n",
+    "df['month'] = df.data_inversa.apply(lambda x: x.split('-')[1])\n",
+    "df['day'] = df.data_inversa.apply(lambda x: x.split('-')[2])\n",
     "\n",
     "df.drop(['horario', 'data_inversa', 'id'], axis=1, inplace=True)"
    ]
@@ -709,7 +709,7 @@
     "\n",
     "km_float = km_float.fillna(99999)\n",
     "\n",
-    "km_int = km_float.apply(lambda x: int(round(x)))\n",
+    "km_int = km_float.appround(x)))\n",
     "df['km_int'] = km_int"
    ]
   },
